--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   "author": "EDA",
   "license": "ISC",
   "dependencies": {
-    "sqlite3": "^5.0.8",
     "express": "^4.17.2",
     "knex": "^2.1.0",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.15",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.3",
