--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "author": "EDA",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "knex": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
+    "pg": "^8.8.0",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
